# UMCG

./: Cargo.toml  config-debug.json  config.json  run_with_trace.sh  trace_unikernel.sh
.cargo/: config.toml
.stfolder/: syncthing-folder-0d680e.txt
resources/: complete_umcg_changes.patch  latest_attempt.txt  latest_failing_attempt.txt  latest_successful_attempt.txt  nanovms-klib.diff  umcg_server_worker_context.raw.txt  umcg_test.rs.txt  umcg_with_logs.c  working-worker-per-task.rs.txt  working_attempt.txt
resources/diffpatchhelp/: 2022_umcg_patch.mbox  2023_umcg_patch.mbox  claude_umcg_patch.mbox  syscalls.h  unistd.h
src/: attempt2.rs  close.rs  executor.rs  http2.rs  lib.rs  main.rs  task_stats.rs  test.rs  umcg_base.rs  umcg_http_test.rs  umcg_test.rs
