[package]
name = "UMCG"
version = "0.1.0"
edition = "2021"

#[dependencies]
#num_cpus = "1.16.0"
[dependencies]
num_cpus = "1.16.0"
libc = "0.2.164"
rand = "0.9.0-beta.1"
crossbeam = "0.8.4"
parking_lot = "0.12.3"
io-uring = "0.7.2"
solicit = "0.4.4"
chrono = "0.4.39"
tiny_http = "0.12.0"
uuid = { version = "1.11.0", features = ["v4"] }
log = "0.4.22"
crossbeam-queue = "0.3.12"
dashmap = "6.1.0"
